apps/misc/strava-statistics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strava-statistics
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 8080
      targetPort: web-ui
